feat: update design tokens to use HSL color values and add type definitions for dimensions

--- a/style-dictionary.config.json
+++ b/style-dictionary.config.json
@@ -2,8 +2,8 @@
   "source": ["design-tokens/**/*.json"],
   "platforms": {
     "css": {
-      "transformGroup": "css",
       "buildPath": "src/styles/tokens/",
+      "transforms": ["attribute/cti", "name/kebab", "color/hsl", "size/px"],
       "files": [
         {
           "destination": "variables.css",
